iterated through last month's content. expanded and added some new commentary. Working another iteration now

--- a/latex/merged_references.bib
+++ b/latex/merged_references.bib
@@ -2,12 +2,23 @@
 %% http://bibdesk.sourceforge.net/
 
 
-%% Created for Evan F. Bollig at 2013-04-30 15:29:10 -0500 
+%% Created for Evan Bollig at 2013-05-27 21:54:54 -0500 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@book{Lapack1999,
+	Address = {Philadelphia, PA},
+	Author = {Anderson, E. and Bai, Z. and Bischof, C. and Blackford, S. and Demmel, J. and Dongarra, J. and Du Croz, J. and Greenbaum, A. and Hammarling, S. and McKenney, A. and Sorensen, D.},
+	Date-Added = {2013-05-28 02:53:53 +0000},
+	Date-Modified = {2013-05-28 02:54:09 +0000},
+	Edition = {Third},
+	Isbn = {0-89871-447-8 (paperback)},
+	Publisher = {Society for Industrial and Applied Mathematics},
+	Title = {{LAPACK} Users' Guide},
+	Year = {1999}}
 
 @article{Davydov2011,
 	Author = {Oleg Davydov and Dang Thi Oanh},
