--- a/latex/rbffd_method.tex
+++ b/latex/rbffd_method.tex
@@ -1030,6 +1030,9 @@ In general, the larger the stencil size, the higher the order of the Laplacian. 
 %TODO: show blocks for boundary conditions (annulus)
 %TODO: application (explicit/implicit solution)
 
+
+\part{WORKING BELOW}
+
 \section{Implementation}
 
 This section details many of the steps we have taken in our practical implementation of RBF-FD. First, the method is not infallible; it faces similar conditioning issues as global/compact RBF method in that the success of the method depends on the choice of support parameter, $\epsilon$. Second, proper choice of $\epsilon$ varies based on the underlying node distribution, as well as the generated stencils. Third, the complexity of the method is low, but there are a few 
@@ -1165,6 +1168,7 @@ In this work, we will add to the above experiences, with the added twist of inco
 RBFs on GPU work: \cite{Schmidt2009a, Schmidt2009b} (global), \cite{Yokota2010} (compact)
 
 
+We are investigating optimizations that target both GPUs and Phi cards for a class of numerical methods based on Radial Basis Functions (RBFs) to solve Partial Differential Equations. RBF methods are increasingly popular across disciplines due to their low complexity, natural ability to function in higher dimension with minimal requirements for an underlying mesh, and high-order---in many cases, spectral---accuracy. RBF methods can be viewed as generalizations of many traditional methods such as Finite Difference and Finite Element to allow for truly unstructured grids. This generalization allows one to reuse many of the same techniques (e.g., sparse matrices, iterative solvers, domain decompositions, etc.) to efficiently obtain solutions. The variety of hardware available on Cascade will help us establish a clear argument in the choice of accelerator type and resolve the dilemma between choosing Phi vs GPU for our method. Since RBFs generalize other methods, our results should have broad reaching impact to answer similar questions for related methods.
 
 
 }
